Fix vertical align of symbols with flexbox

--- a/sci-viz-gallery/src/css/media-object-button.css
+++ b/sci-viz-gallery/src/css/media-object-button.css
@@ -12,6 +12,10 @@
 }
 
 .vsmall {
-  font-size: .85rem;
-  vertical-align: 5%;
+  font-size: .90rem;
+}
+
+.arrow-container {
+  display: flex;
+  align-items: center;
 }
